--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,6 +16,21 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <td>
+         <% if book.favorited_by?(current_user) %>
+              <p>
+                  <%= link_to book_favorites_path(book), method: :delete, style: "color:red;" do %>
+                    <span>♥<%= book.favorites.count %></span>
+                  <% end %>
+              </p>
+              <% else %>
+              <p>
+                  <%= link_to book_favorites_path(book), method: :post do %>
+                      <span>♡<%= book.favorites.count %></span>
+                  <% end %>
+              </p>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
