--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -31,6 +31,7 @@
               </p>
           <% end %>
         </td>
+        <td>コメント数：<%= book.comments.count %></td>
       </tr>
     <% end %>
   </tbody>
