--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,6 +38,21 @@
           <% end %>
         </tr>
       </table>
+      <% @book.comments.each do |book_comment| %>
+        <p>
+          <%= image_tag book_comment.user.get_profile_image, size:"70x70" %><%= book_comment.comment %>
+          <% if book_comment.user == current_user %>
+              <%= link_to "Destroy", book_comment_path(book_comment.book, book_comment), method: :delete, remote: true, class: "btn btn-sm btn-danger destroy_book_#{@book.id}" %>
+          <% end %>
+        </p>
+        <%= link_to(@book.user) do %>
+          <%= book_comment.user.name %>
+        <% end %>
+      <% end %>
+      <%= form_with model: [@book, @comment] do |f| %>
+        <%= f.text_area :comment, rows: 5 ,placeholder: "コメントをここに", class: "w-100" %>
+        <%= f.submit '送信' %>
+      <% end %>
     </div>
   </div>
 </div>
