--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,20 +17,8 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td>
-            <% if @book.favorited_by?(current_user) %>
-                <p>
-                    <%= link_to book_favorites_path(@book), method: :delete, style: "color:red;" do %>
-                      <span>♥<%= @book.favorites.count %></span>
-                    <% end %>
-                </p>
-                <% else %>
-                <p>
-                    <%= link_to book_favorites_path(@book), method: :post do %>
-                        <span>♡<%= @book.favorites.count %></span>
-                    <% end %>
-                </p>
-            <% end %>
+          <td id="favorite_buttons_<%= @book.id %>">
+            <%= render "favorites/favorites", book: @book %>
           </td>
           <% if @user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
